[gd_scene load_steps=8 format=3 uid="uid://dvdrri3hhxbyn"]

[ext_resource type="Script" path="res://scripts/buy_hat.gd" id="1_ltsgc"]
[ext_resource type="Texture2D" uid="uid://b7fiuxcxdkeuq" path="res://images/hats/meowboy_hat.png" id="1_phhha"]
[ext_resource type="Texture2D" uid="uid://d3gcg3qf38m75" path="res://images/hats/meowboy_hat_pressed.png" id="2_pr1rw"]
[ext_resource type="Texture2D" uid="uid://drbwnkjy60sx3" path="res://images/hats/meowboy_hat_hover.png" id="3_ljgyh"]
[ext_resource type="PackedScene" uid="uid://pwngge8ttviq" path="res://scenes/floating_text.tscn" id="4_eh0hn"]
[ext_resource type="Texture2D" uid="uid://bkf57disno6ye" path="res://images/catcoin/stackable_catcoin.png" id="5_6c0i6"]
[ext_resource type="LabelSettings" uid="uid://bipvhqgn1pls7" path="res://themes/smol_label_with_box.tres" id="6_56c5m"]

[node name="BuyHat" type="HBoxContainer" groups=["hat_sellers"]]
custom_minimum_size = Vector2(62, 32)
theme_override_constants/separation = -8
script = ExtResource("1_ltsgc")

[node name="BuyButton" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("1_phhha")
texture_pressed = ExtResource("2_pr1rw")
texture_hover = ExtResource("3_ljgyh")
stretch_mode = 0

[node name="FloatingText" parent="BuyButton" instance=ExtResource("4_eh0hn")]
unique_name_in_owner = true
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
theme_override_constants/separation = -2

[node name="Coin" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("5_6c0i6")
expand_mode = 1

[node name="CostLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "999k"
label_settings = ExtResource("6_56c5m")
vertical_alignment = 2

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
